--- a/movieslist/templates/movieslist/main_page.html
+++ b/movieslist/templates/movieslist/main_page.html
@@ -3,8 +3,9 @@
 {% block content %}
 <h1>Twoje listy</h1>
 {% if user.is_authenticated %}
-    <p>Lista 1</p>
-    <p>Lista 2</p>
+    {% for list in lists %}
+        <p><span class="glyphicon glyphicon-minus"></span><a href="{% url 'list_detail' pk=list.pk %}">{{ list.title }}</a></p>
+    {% endfor %}
     <br>
     <p> <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
 {% else %}
