--- a/movieslist/templates/movieslist/main_page.html
+++ b/movieslist/templates/movieslist/main_page.html
@@ -1,11 +1,16 @@
 {% extends 'movieslist/base.html' %}
 
 {% block content %}
-<h1>Twoje listy</h1>
 {% if user.is_authenticated %}
+<h1>Twoje listy</h1>
     {% for list in lists %}
-        <p><span class="glyphicon glyphicon-minus"></span><a href="{% url 'list_detail' pk=list.pk %}">{{ list.title }}</a></p>
+        <p><span class="glyphicon glyphicon-minus"></span><a href="{% url 'list_detail' pk=list.pk %}">{{ list.list_name }}</a></p>
     {% endfor %}
+
+<form method="POST" class="post-form">{% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="save btn btn-default">Save</button>
+</form>
     <br>
     <p> <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
 {% else %}
