Added ability to remove list by author of list

--- a/movieslist/templates/movieslist/list_detail.html
+++ b/movieslist/templates/movieslist/list_detail.html
@@ -1,19 +1,23 @@
 {% extends 'movieslist/base.html' %}
 
 {% block content %}
-<h1>{{ movielist.title }}</h1>
+<h1>{{ movielist.list_name }}</h1>
 <form method="POST" class="post-form">{% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="save btn btn-default">Save</button>
 </form>
 {% for movie in movielist.movie_list_name.all %}
 <p><span class="glyphicon glyphicon-minus"></span>{{ movie.title }}
-    {% if user == movie.author %}
     <a class="btn btn-default btn-xs" href="{% url 'movie_remove' pk=movie.pk %}"><span
             class="glyphicon glyphicon-remove"></span></a>
-    {% endif %}
 </p>
 {% endfor %}
+<br>
+
+{% if user == contributors.all.0 %}
+    <p><a href="{% url 'list_remove' pk=movielist.pk %}">Usuń listę</a></p>
+{% endif %}
+
 <p><a href="{% url 'main_page' %}">Powrót</a></p>
 
 
